--- a/zernovarka/scss/layout/_content.scss
+++ b/zernovarka/scss/layout/_content.scss
@@ -183,10 +183,13 @@ h3{
 }
 .breadcrumbs{
 	margin-bottom: 25px;
-	span{
+	a{
 		font: 500 10px 'Roboto';
 		letter-spacing: 0.05em;
 		color: #acacac;
+		&:hover{
+			color: #606060;
+		}
 	}
 }
 .btn{
@@ -214,6 +217,9 @@ h3{
 	}
 	&_white{
 		color: #fff;
+	}
+	&_basket{
+		width: 180px;
 	}
 }
 .adva{
@@ -609,6 +615,9 @@ h3{
 		background: transparent;
 		padding: 0;
 	}
+	&_basket{
+		padding-bottom: 135px;
+	}
 }
 .brands{
 	&__item{
@@ -936,6 +945,742 @@ h3{
     box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
 }
 
+.similarnews{
+	padding: 56px 0 85px;
+	&__slider{
+		width: 870px;
+    	margin: 0 auto;
+	}
+	.slick-list{
+		padding: 35px 0;
+		margin: 0 -15px;
+		/*overflow: visible !important;*/
+	}
+	.slick-prev, .slick-next{
+		position: absolute;
+		top: 43%;
+		width: 40px;
+		height: 40px;
+		border-radius: 100%;
+		background: #e8e8e8;
+		border: 0;
+		transition: 0.2s ease-in-out;
+		&.flex{
+			justify-content: center;
+		}
+		&:hover{
+			background: #f8b30e;
+		}
+	}
+	.slick-prev{
+		left: -82px;
+	}
+	.slick-next{
+		right: -82px;
+	}
+}
+.cartgood{
+	background: #f8f8f8;
+	.breadcrumbs{
+		margin-bottom: 0;
+		padding: 45px 0;
+	}
+	&__cont{
+		padding-bottom: 100px;
+		&.flex{
+			align-items: flex-start;
+		}
+	}
+	&__left{
+		width: 585px;
+		height: 420px;
+		background: #fff;
+		position: relative;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__slider{
+		width: auto;
+		img{
+			width: auto !important;
+		}
+	}
+	&__right{
+		width: 485px;
+	}
+	&__title{
+		color: #59514c;
+		font: 300 30px/40px 'Roboto';
+		text-transform: uppercase;
+	}
+	&__code{
+		color: #59514c;
+		font: 400 12px/30px 'Roboto';
+		letter-spacing: 0.05em;
+		vertical-align: middle;
+		padding-right: 10px;
+	}
+	&__available{
+		text-transform: uppercase;
+		font: 300 10px/30px 'Roboto';
+		letter-spacing: 0.05em;
+		color: #fff;
+		background: #99ba00;
+		padding: 3.5px 8px;
+    	border-radius: 20px;
+    	vertical-align: middle;
+	}
+	&__currprice{
+		margin: 20px 0;
+		&.flex{
+			justify-content: flex-start;
+		}
+		p{
+			color: #e67420;
+			font: 400 25px/40px 'Roboto';
+			margin-right: 15px;
+			span{
+				font-size: 20px;
+			}
+		}
+	}
+	&__oldprice{
+		p{
+			color: #aaaaaa;
+			font: 400 12px/30px 'Roboto';
+			letter-spacing: 0.05em;
+			margin-top: 3px;
+			text-decoration:line-through
+		}
+	}
+	&__sheme{
+		margin-bottom: 29px;
+		&.flex{
+			justify-content: flex-start;
+		}
+		img{
+			margin-right: 10px;
+		}
+		a{
+			font: 400 12px 'Roboto';
+			color: #aaaaaa;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+	}
+	&__desc{
+		font: 400 14px/24px 'Roboto';
+		color: #59514c;
+		max-width: 292px;
+		padding-bottom: 15px;
+		border-bottom: 1px solid #d2cfcf;
+		margin-bottom: 15px;
+	}
+	&__discount{
+		color: #aaaaaa;
+		font: 400 12px/20px 'Roboto';
+		margin-bottom: 15px;
+		span{
+			font-size: 14px;
+			color: #f8b30e;
+		}
+	}
+	&__amount{
+		width: 100px;
+		height: 40px;
+		background: transparent;
+		border: 1px solid #aaaaaa;
+		border-radius: 30px;
+		span{
+			width: 29px;
+			height: 40px;
+			font: 700 12px/26px 'Roboto';
+			color: #aaaaaa;
+			cursor: pointer;
+			user-select: none;
+			&.minus{
+				&.flex{
+					justify-content: flex-end;
+				}
+			}
+			&.plus{
+				&.flex{
+					justify-content: flex-start;
+				}
+			}
+		}
+		input{
+			width: 40px;
+			height: 40px;
+			background: transparent;
+			font: 700 12px/26px 'Roboto';
+			color: #aaaaaa;
+			border: 0;
+			text-align: center;
+		}
+	}
+	&__more{
+		font: 400 12px/24px 'Roboto';
+		color: #aaaaaa;
+		cursor: pointer;
+	}
+	&__butts{
+		width: 292px;
+	}
+}
+/*Tech*/
+.tech{
+	padding: 55px 0 90px;
+	background: #f8f8f8;
+	&__cont{
+		&.flex{
+			align-items: stretch;
+		}
+	}
+	&__item{
+		background: #fff;
+		width: 165px;
+		margin-bottom: 30px;
+	}
+	&__img{
+		width: 100%;
+		height: 215px;
+		&.flex{
+			justify-content: center;
+			align-items: flex-end;
+		}
+	}
+	&__title{
+		display: block;
+		font: 400 17px 'Roboto';
+		color: #f8b30e;
+		letter-spacing: 0.05em;
+		padding: 15px 0;
+	}
+	&__info{
+		width: 137px;
+		height: 177px;
+		margin: 0 auto;
+		border-top: 1px solid #a8a29d;
+		&.flex{
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
+		}
+	}
+	&__btn{
+		display: block;
+		margin: 0 auto;
+		margin-top: auto;
+		margin-bottom: 28px;
+		width: 80px;
+		height: 24px;
+		color: #59514c;
+		font: 500 10px 'Roboto';
+		text-transform: none;
+		letter-spacing: 0;
+	}
+	&__text{
+		font: 400 12px/18px 'Roboto';
+		letter-spacing: 0.05em;
+		color: #59514c;
+	}
+}
+.pager{
+	margin-top: 70px;
+	&.flex{
+		justify-content: center;
+	}
+	&__prev{
+		margin-right: 30px;
+		img{
+			transform: rotate(180deg);
+		}
+	}
+	&__number{
+		font: 400 15px/30px 'Roboto';
+		letter-spacing: 0.05em;
+		color: #59514c;
+		margin: 0 10px;
+		cursor: pointer;
+		transition: all 0.2s ease;
+		&::after{
+			display: block;
+    		content: attr(title);
+    		font-weight: 700;
+    		font-size: 20px;
+    		height: 0;
+    		overflow: hidden;
+    		visibility: hidden;
+		}
+		&:hover{
+			font-size: 20px;
+			font-weight: 700;
+			color: #f8b30e;
+		}
+	}
+	&__number{
+		font: 400 15px/30px 'Roboto';
+		letter-spacing: 0.05em;
+		color: #59514c;
+		margin: 0 10px;
+	}
+	&__next{
+		margin-left: 30px;
+	}
+}
+/*testimonials*/
+.testimonials{
+	padding: 55px 0 90px;
+	background: #f8f8f8;
+	&__col{
+		width: 360px;
+	}
+	&__item{
+		width: 100%;
+		padding: 40px 35px;
+		background: #fff;
+		margin-bottom: 30px;
+		&_1{
+			.testimonials__text{
+				height: 160px;
+			}
+		}
+		&_2{
+			.testimonials__text{
+				height: 320px;
+			}
+		}
+		&_3{
+			.testimonials__text{
+				height: 300px;
+			}
+		}
+		&_4{
+			.testimonials__text{
+				height: 180px;
+			}
+		}
+		&_5{
+			.testimonials__text{
+				height: 100px;
+			}
+		}
+		&_6{
+			.testimonials__text{
+				height: 380px;
+			}
+		}
+	}
+	&__text{
+		color: #aaaaaa;
+		margin-bottom: 40px;
+		overflow: hidden;
+	}
+}
+/*Basket*/
+.basket{
+	background: #fff;
+	&.flex{
+		align-items: flex-start;
+	}
+	&_1{
+		display: block;
+	}
+	&_2{
+		padding: 45px 30px;
+	}
+	&_3{
+		width: 480px;
+		margin: 0 auto;
+		padding: 80px 40px 40px;
+		box-shadow: 0px 3px 35px 0px rgba(46, 46, 46, 0.09);
+	}
+	&_4{
+		width: 480px;
+		margin: 0 auto;
+		padding: 45px 40px 60px;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__row{
+		padding: 30px 0;
+		margin: 0 30px;
+		background: #fff;
+		max-width: 1080px;
+		border-bottom: 1px solid #aaaaaa;
+		&:last-child{
+			border-bottom: 0;
+		}
+		&_title{
+			background: #e8e8e8;
+			padding: 0 30px;
+			margin: 0;
+			max-width: 1140px;
+			border-bottom: 0;
+		}
+		&_total{
+			&.flex{
+				align-items: flex-end;
+			}
+		}
+	}
+	&__col{
+		h2{
+			color: #aaaaaa;
+			font: 400 10px/40px 'Roboto';
+		}
+		&_1{
+			width: 160px;
+		}
+		&_2{
+			width: 280px;
+		}
+		&_3{
+			width: 205px;
+		}
+		&_4{
+			width: 230px;
+		}
+		&_5{
+			width: 175px;
+		}
+		&_6{
+			width: 15px;
+		}
+	}
+	&__img{
+		width: 130px;
+		img{
+			max-width: 100%;
+		}
+	}
+	&__name{
+		color: #59514c;
+		font: 500 12px/18px 'Roboto';
+		letter-spacing: 0.05em;
+		margin-bottom: 6px;
+	}
+	&__code{
+		color: #59514c;
+		font: 400 10px 'Roboto';
+		letter-spacing: 0.05em;
+	}
+	&__price{
+		color: #e67420;
+		font: 400 18px 'Roboto';
+		letter-spacing: 0.05em;
+	}
+	&__oldprice{
+		color: #aaaaaa;
+		font: 400 12px 'Roboto';
+		letter-spacing: 0.05em;
+		text-decoration: line-through;
+	}
+	&__remove{
+		filter: grayscale(100%);
+		cursor: pointer;
+		&:hover{
+			filter: none;
+		}
+	}
+	&__discount{
+		border: 1px solid #e8e8e8;
+		width: 170px;
+		height: 40px;
+		border-radius: 30px;
+		background: #f8f8f8;
+		&.flex{
+			justify-content: center;
+		}
+		input{
+			width: 116px;
+			height: 16px;
+			border: 0;
+			border-right: 1px solid #e8e8e8;
+			padding: 0 15px;
+			color: #000;
+			font: 500 10px 'Roboto';
+			text-transform: uppercase;
+			background: transparent;
+			&::placeholder{
+				color: #aaaaaa;
+				font: 500 10px 'Roboto';
+				text-transform: uppercase;
+			}
+		}
+		img{
+			margin: 0 10px 0 10px;
+		}
+	}
+	&__cont{
+		&.flex{
+			align-items: flex-end;
+		}
+		&_2{
+			padding-left: 60px;
+		}
+		&_3{
+			padding-left: 0;
+			width: 100%;
+		}
+	}
+	&__box{
+		h2{
+			color: #aaaaaa;
+    		font: 400 10px 'Roboto';
+    		margin-bottom: 8px;
+		}
+		p{
+			color: #aaaaaa;
+			font: 400 24px 'Roboto';
+			letter-spacing: 0.05em;
+			text-align: center;
+			&.yellow{
+				color: #e67420;
+				text-align: left;
+			}
+		}
+		&_center{
+			margin: 0 100px 0 40px;
+		}
+		&_2{
+			margin: 0 auto;
+			margin-bottom: 50px;
+		}
+	}
+	&__left{
+		padding: 35px 80px 0 0;
+		border-right: 1px solid #e8e8e8;
+		width: 620px;
+	}
+	&__title{
+		color: #59514c;
+		font: 400 18px 'Roboto';
+		margin-bottom: 60px;
+		padding-left: 60px;
+		&_2{
+			margin-bottom: 25px;
+		}
+		&_3{
+			padding-left: 80px;
+			margin-bottom: 25px;
+		}
+	}
+	&__form{
+		padding-left: 60px;
+		margin-bottom: 80px;
+	}
+	&__inputrow{
+		margin-bottom: 20px;
+		width: 475px;
+	}
+	&__input{
+		width: 190px;
+		height: 35px;
+		input{
+			border: 0;
+			background: none;
+			height: 35px;
+			font: 400 16px 'Roboto';
+			color: #59514c;
+			letter-spacing: 0.05em;
+			border-bottom: 1px solid #b5b5b5;
+			width: 100%;
+			&::placeholder{
+				font: 400 10px 'Roboto';
+				color: #aaaaaa;
+				letter-spacing: 0.05em;
+			}
+			&:focus{
+				color: #f9b30e;
+				border-bottom: 1px solid #f9b30e;
+			}
+		}
+		&_2{
+			width: 250px;
+		}
+		&_3{
+			width: 100%;
+		}
+	}
+	&__right{
+		width: 460px;
+		padding-top: 35px;
+	}
+	&__info{
+		color: #f9b30e;
+		font: 400 12px 'Roboto';
+		text-decoration: underline;
+		padding-left: 60px;
+		display: block;
+		margin-bottom: 30px;
+		&_2{
+			padding-left: 80px;
+			margin-bottom: 50px;
+		}
+	}
+	&__radios{
+		padding-left: 60px;
+		margin-bottom: 83px;
+		&_2{
+			padding-left: 80px;
+			margin-bottom: 20px;
+		}
+	}
+	&__radio{
+		margin-bottom: 25px;
+		p{
+			color: #aaaaaa;
+			font: 400 10px 'Roboto';
+			padding-top: 7px;
+	    	padding-left: 30px;
+		}
+	}
+	&__check{
+		width: 31px;
+		height: 31px;
+		border-radius: 100%;
+		background: #f8b30e;
+		margin-bottom: 45px;
+		&.flex{
+			justify-content: center;
+		}
+		img{
+			filter: brightness(0) invert(100%);
+		}
+	}
+	&__thx{
+		width: 100%;
+		h2{
+			font: 400 24px 'Roboto';
+			color: #59514c;
+			text-align: center;
+		}
+		h3{
+			font: 400 21px 'Roboto';
+			color: #59514c;
+			text-align: center;
+			margin-bottom: 45px;
+		}
+	}
+	&__p{
+		&_1{
+			color: #aaaaaa;
+			font: 400 12px 'Roboto';
+			text-align: center;
+			margin-bottom: 15px;
+		}
+		&_2{
+			color: #59514c;
+			font: 300 20px 'Roboto';
+			text-align: center;
+			margin-bottom: 55px;
+		}
+		&_3{
+			color: #59514c;
+			font: 300 10px/18px 'Roboto';
+			text-align: center;
+			margin-bottom: 40px;
+		}
+	}
+	&__tabs{
+		margin-bottom: 55px;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__tab{
+		position: relative;
+		text-align: center;
+		margin: 0 91px;
+		width: 55px;
+		cursor: pointer;
+		&:first-child{
+			&::before{
+				content: none;
+			}
+		}
+		&::before{
+			content: "";
+			display: inline-block;
+			position: absolute;
+			right: 42px;
+    		top: 15px;
+			width: 210px;
+			height: 1px;
+			background: #aaaaaa;
+		}
+		span{
+			color: #fff;
+			font: 400 14px 'Roboto';
+			width: 30px;
+			height: 30px;
+			background: #aaaaaa;
+			border-radius: 100%;
+			margin: 0 auto;
+			margin-bottom: 10px;
+			position: relative;
+			z-index: 2;
+			&.flex{
+				justify-content: center;
+			}
+		}
+		p{
+			color: #606060;
+			font: 500 12px 'Roboto';
+			text-align: center;
+		}
+		&_active{
+			span{
+				background: #f8b30e;
+			}
+			&::before{
+				background: #f8b30e;
+			}
+		}
+	}
+}
+.radio{
+	display: none;
+}
+.radiolabel{
+	padding-left: 30px;
+	color: #59514c;
+	font: 400 12px 'Roboto';
+	position: relative;
+	&::before{
+		content: "";
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 50%;			
+		margin-top: -8px;
+		width: 16px;
+		height: 16px;
+		border-radius: 100%;
+		border: 1px solid #acacac;
+	}
+	&::after{
+		content: "";
+		width: 8px;
+		height: 8px;
+		border-radius: 100%;
+		background: #f8b30e;
+		position: absolute;
+		left: 4px;
+		margin-top: -4px;
+		top: 50%;
+		opacity: 0;
+		transition: 0.3s ease;
+	}
+}
+.radio:checked + .radiolabel::after{
+	opacity: 1;
+}
 
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
@@ -1041,6 +1786,99 @@ h3{
 		&__text{
 			width: 150px;
     		padding: 15px 10px;
+		}
+	}
+	/*Cartgood*/
+	.cartgood{
+		&__left{
+			width: 520px;
+		}
+		&__right{
+			width: 390px;
+		}
+	}
+	/*Tech*/
+	.tech{
+		&__cont{
+			&.flex{
+				justify-content: flex-start;
+			}
+		}
+		&__item{
+			margin-right: 31px;
+			&:nth-child(5n){
+				margin-right: 0;
+			}
+		}
+	}
+	.pager{
+		margin-top: 35px;
+	}
+	/*testimonials*/
+	.testimonials{
+		&__cont{
+			&.flex{
+				align-items: flex-start;
+			}
+		}
+		&__item{
+			padding: 30px 20px;
+		}
+	}
+	/*testimonials*/
+	.testimonials{
+		&__col{
+			width: 300px;
+		}
+	}
+	/*Basket*/
+	.basket{
+		&__col{
+			&_2{
+				width: 180px;
+			}
+			&_3{
+				width: 140px;
+			}
+			&_4{
+				width: 200px;
+			}
+		}
+		&__left{
+		    width: 510px;
+		    padding-right: 30px;
+		}
+		&__right{
+			width: 370px;
+		}
+		&__info{
+			padding-left: 30px;
+			&_2{
+				padding-left: 80px;
+			}
+		}
+		&__radios{
+			padding-left: 30px;
+			&_2{
+				padding-left: 80px;
+			}
+		}
+		&__title{
+			padding-left: 0;
+			&_2{
+				padding-left: 30px;
+			}
+			&_3{
+				padding-left: 80px;
+			}
+		}
+		&__form{
+			padding-left: 0;
+		}
+		&__cont{
+			&_2{
+				padding-left: 30px;
+			}
 		}
 	}
 }
@@ -1173,6 +2011,150 @@ h3{
 	.similar{
 		&__item{
 			margin-bottom: 15px;
+		}
+	}
+	/*Cartgood*/
+	.cartgood{
+		&__left{
+			width: 415px;
+		}
+		&__right{
+			width: 320px;
+		}
+		&__title{
+			font: 300 25px/33px 'Roboto';
+		}
+		&__cont{
+			padding-bottom: 70px;
+		}
+		.breadcrumbs{
+			padding: 25px 0;
+		}
+	}
+	.similarnews{
+		padding-bottom: 20px;
+		&__slider{
+			width: 750px;
+		}
+	}
+	/*Tech*/
+	.tech{
+		&__cont{
+			&.flex{
+				justify-content: flex-start;
+			}
+		}
+		&__item{
+			margin-right: 30px;
+			&:nth-child(4n){
+				margin-right: 0;
+			}
+		}
+	}
+	.pager{
+		margin-top: 35px;
+	}
+	/*testimonials*/
+	.testimonials{
+		&__col{
+			&_3{
+				width: 100%;
+				display: flex;
+				justify-content: space-between;
+				align-items: flex-start;
+			}
+		}
+		&__item{
+			&_5, &_6{
+				width: 360px;
+			}
+		}
+	}
+	/*Basket*/
+	.basket{
+		&__tab{
+			margin: 0px 50px;
+			&::before{
+				width: 126px;
+			}
+		}
+		&__col{
+			&_1{
+				width: 130px;
+			}
+			&_2{
+				width: 170px;
+			}
+			&_3{
+				width: 105px;
+			}
+			&_4{
+				width: 110px;
+			}
+			&_5{
+				width: 125px;
+			}
+		}
+		&__box{
+			&_center{
+				margin: 0 10px 0 10px;
+			}
+		}
+		&__left{
+		   width: 420px;
+		   padding: 35px 25px 0 0;
+		}
+		&__inputrow{
+			width: 380px;
+		}
+		&__input{
+			width: 140px;
+			&_2{
+				width: 200px;
+			}
+			&_3{
+				width: 100%;
+			}
+		}
+		&__info{
+			padding-left: 0;
+		}
+		&__right{
+			width: 250px;
+		}
+		&__info{
+			padding-left: 0;
+			&_2{
+				padding-left: 80px;
+			}
+		}
+		&__radios{
+			padding-left: 0;
+			&_2{
+				padding-left: 80px;
+			}
+		}
+		&__title{
+			padding-left: 0;
+			&_2{
+				padding-left: 0;
+			}
+			&_3{
+				padding-left: 80px;
+			}
+		}
+		&__form{
+			padding-left: 0;
+		}
+		&__cont{
+			&_2{
+				padding-left: 0;
+			}
+		}
+	}
+	.btn{
+		&_basket{
+			width: 150px;
 		}
 	}
 }
@@ -1359,8 +2341,111 @@ h3{
 			padding: 15px 12px;
 		}
 	}
+	/*Cartgood*/
+	.cartgood{
+		&__title{
+			br{
+				display: none;
+			}
+		}
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__left{
+			width: 100%;
+			max-width: 485px;
+			margin-bottom: 25px;
+		}
+		&__right{
+			width: 100%;
+			max-width: 485px;
+		}
+	}
+	.similarnews{
+		&__slider{
+			width: 400px;
+		}
+	}
+	/*Tech*/
+	.tech{
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		/*&__item{
+			margin-right: 30px;
+			&:nth-child(4n){
+				margin-right: 0;
+			}
+		}*/
+	}
+	.pager{
+		margin-top: 30px;
+	}
+	/*testimonials*/
+	.testimonials{
+		padding: 35px 0 50px;
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__col{
+			width: 100%;
+			max-width: 360px;
+		}
+	}
+	/*Basket*/
+	.basket{
+		&__left{
+			padding: 20px 0px 35px 0;
+			max-width: 620px;
+			width: 100%;
+			border-bottom: 1px solid #e8e8e8;
+			border-right: 0;
+		}
+		&_2{
+			padding: 20px 15px;
+		}
+		&__title{
+			padding-left: 10px;
+			margin-bottom: 20px;
+		}
+		&__form{
+			padding-left: 10px;
+			margin-bottom: 30px;
+		}
+		&__inputrow{
+			width: 100%;
+			margin-bottom: 0;
+		}
+		&__input{
+		    width: 100%;
+		    margin-bottom: 10px;
+		}
+		&__info{
+			padding-left: 10px;
+		}
+		&__radios{
+			padding-left: 10px;
+			margin-bottom: 40px;
+		}
+		&__cont{
+			&_2{
+				padding-left: 10px;
+			}
+		}
+	}
 }
 @media screen and (max-width: 410px){
+	.similarnews{
+		&__slider{
+			width: 200px;
+		}
+	}
 	.newgoods{
 		width: 200px;
 	}
